ArticlesAPI-v1.0 truly fixed GET Articles/{id} endpoion returning ArticleVersion
